--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Online portfolio site",
   "scripts": {
     "dev": "gulp serve",
-    "build": "rm -rf ./dist && gulp build"
+    "build": "rm -rf ./dist && rm ./index.html && gulp build"
   },
   "devDependencies": {
     "babel-core": "^6.24.1",
