--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "gulp-imagemin": "^3.0.3",
     "gulp-rename": "^1.2.2",
     "gulp-sass": "^3.1.0",
+    "gulp-shell": "^0.6.3",
     "gulp-sourcemaps": "^2.4.1",
     "gulp-uglify": "^2.0.0",
     "gulp-util": "^3.0.8",
