--- a/package.json
+++ b/package.json
@@ -3,8 +3,9 @@
   "version": "2.0.0",
   "description": "Online portfolio site",
   "scripts": {
-    "dev": "gulp serve",
-    "build": "rm -rf ./dist && rm ./index.html && gulp build"
+    "build": "npm run clean && gulp build",
+    "clean": "rimraf dist && rimraf index.html",
+    "start": "gulp serve"
   },
   "dependencies": {
     "feather-icons": "^3.2.2"
@@ -34,6 +35,7 @@
     "gulp-uglify": "^2.0.0",
     "gulp-util": "^3.0.8",
     "node-sass": "^4.5.0",
+    "rimraf": "^2.6.1",
     "stylelint": "^7.10.1",
     "stylelint-config-standard": "^16.0.0",
     "stylelint-order": "^0.4.4",
