--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "tohjustin.github.io",
   "version": "2.0.0",
-  "description": "Online portfolio site",
+  "description": "portfolio website",
   "scripts": {
     "build": "npm run clean && gulp build",
     "clean": "rimraf dist && rimraf index.html",
@@ -19,12 +19,10 @@
     "eslint": "^3.15.0",
     "eslint-config-airbnb-base": "^11.2.0",
     "eslint-plugin-import": "^2.2.0",
-    "graceful-fs": "^4.1.11",
     "gulp": "^3.9.1",
     "gulp-autoprefixer": "^3.1.1",
     "gulp-babel": "^6.1.2",
     "gulp-clean-css": "^3.0.0",
-    "gulp-concat": "^2.6.0",
     "gulp-eslint": "^4.0.0",
     "gulp-imagemin": "^3.0.3",
     "gulp-rename": "^1.2.2",
