--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "gulp-uglify": "^2.0.0",
     "gulp-util": "^3.0.8",
     "node-sass": "^4.5.0",
+    "pump": "^1.0.2",
     "rimraf": "^2.6.1",
     "stylelint": "^7.10.1",
     "stylelint-config-standard": "^16.0.0",
