--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "gulp-sourcemaps": "^2.4.1",
     "gulp-stylelint": "^5.0.0",
     "gulp-uglify": "^2.0.0",
+    "gulp-uglify-es": "^0.1.3",
     "node-sass": "^4.5.0",
     "pump": "^1.0.2",
     "rimraf": "^2.6.1",
