--- a/package.json
+++ b/package.json
@@ -3,9 +3,12 @@
   "version": "2.0.0",
   "description": "portfolio website",
   "scripts": {
-    "build": "npm run clean && gulp build",
+    "build": "npm-run-all -p clean export && gulp build",
     "clean": "rimraf dist && rimraf index.html",
-    "start": "npm run clean && gulp serve"
+    "export:icons": "sketch/exportIcon.sh sketch/icon.sketch",
+    "export:resume": "sketch/exportResume.sh sketch/resume.sketch",
+    "export": "npm-run-all -p export:**",
+    "start": "npm-run-all -p clean export:icons && gulp serve"
   },
   "dependencies": {
     "feather-icons": "^3.2.2"
@@ -27,12 +30,12 @@
     "gulp-imagemin": "^3.0.3",
     "gulp-rename": "^1.2.2",
     "gulp-sass": "^3.1.0",
-    "gulp-shell": "^0.6.3",
     "gulp-sourcemaps": "^2.4.1",
     "gulp-stylelint": "^5.0.0",
     "gulp-uglify": "^2.0.0",
     "gulp-uglify-es": "^0.1.3",
     "node-sass": "^4.5.0",
+    "npm-run-all": "^4.1.1",
     "pump": "^1.0.2",
     "rimraf": "^2.6.1",
     "stylelint": "^7.10.1",
