--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "gulp": "^3.9.1",
     "gulp-autoprefixer": "^3.1.1",
     "gulp-babel": "^6.1.2",
+    "gulp-babel-minify": "^0.2.0",
     "gulp-clean-css": "^3.0.0",
     "gulp-eslint": "^4.0.0",
     "gulp-imagemin": "^3.0.3",
@@ -33,7 +34,6 @@
     "gulp-sourcemaps": "^2.4.1",
     "gulp-stylelint": "^5.0.0",
     "gulp-uglify": "^2.0.0",
-    "gulp-uglify-es": "^0.1.3",
     "node-sass": "^4.5.0",
     "npm-run-all": "^4.1.1",
     "pump": "^1.0.2",
