--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "gulp-clean-css": "^3.0.0",
     "gulp-eslint": "^4.0.0",
     "gulp-imagemin": "^3.0.3",
+    "gulp-load-plugins": "^1.5.0",
     "gulp-rename": "^1.2.2",
     "gulp-sass": "^3.1.0",
     "gulp-sourcemaps": "^2.4.1",
