gulp: Disable sourcemap generation in prod build

--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "2.0.0",
   "description": "portfolio website",
   "scripts": {
-    "build": "npm-run-all -p clean export && gulp build",
+    "build": "npm-run-all -p clean export && gulp build --production",
     "clean": "rimraf dist && rimraf index.html",
     "export:icons": "sketch/exportIcon.sh sketch/icon.sketch",
     "export:resume": "sketch/exportResume.sh sketch/resume.sketch",
@@ -28,6 +28,7 @@
     "gulp-babel-minify": "^0.2.0",
     "gulp-clean-css": "^3.0.0",
     "gulp-eslint": "^4.0.0",
+    "gulp-if": "^2.0.2",
     "gulp-imagemin": "^3.0.3",
     "gulp-load-plugins": "^1.5.0",
     "gulp-rename": "^1.2.2",
@@ -35,6 +36,7 @@
     "gulp-sourcemaps": "^2.4.1",
     "gulp-stylelint": "^5.0.0",
     "gulp-uglify": "^2.0.0",
+    "gulp-util": "^3.0.8",
     "node-sass": "^4.5.0",
     "npm-run-all": "^4.1.1",
     "pump": "^1.0.2",
