--- a/.eslintrc
+++ b/.eslintrc
@@ -7,6 +7,7 @@
         "import"
     ],
     "rules": {
-      "import/no-named-default": 0
+        "import/no-named-default": 0,
+        "max-classes-per-file": 0
     }
 }
