--- a/package.json
+++ b/package.json
@@ -16,42 +16,45 @@
     "export": "npm-run-all -p export:**",
     "start": "npm-run-all -p clean export && gulp serve"
   },
+  "browserslist": [
+    "last 2 versions"
+  ],
   "dependencies": {
-    "feather-icons": "^3.2.2"
+    "feather-icons": "4.25.0"
   },
   "devDependencies": {
-    "babel-eslint": "^7.1.1",
-    "babel-preset-es2015": "^6.24.1",
-    "babelify": "^7.3.0",
-    "browser-sync": "^2.18.7",
-    "browserify": "^14.0.0",
-    "eslint": "^3.15.0",
-    "eslint-config-airbnb-base": "^11.2.0",
-    "eslint-plugin-import": "^2.2.0",
-    "gulp": "^3.9.1",
-    "gulp-autoprefixer": "^3.1.1",
-    "gulp-babel": "^6.1.2",
-    "gulp-babel-minify": "^0.2.0",
-    "gulp-clean-css": "^3.0.0",
-    "gulp-eslint": "^4.0.0",
-    "gulp-if": "^2.0.2",
-    "gulp-imagemin": "^3.0.3",
-    "gulp-load-plugins": "^1.5.0",
-    "gulp-rename": "^1.2.2",
-    "gulp-sass": "^3.1.0",
-    "gulp-sourcemaps": "^2.4.1",
-    "gulp-stylelint": "^5.0.0",
-    "gulp-uglify": "^2.0.0",
-    "gulp-util": "^3.0.8",
-    "node-sass": "^4.5.0",
-    "npm-run-all": "^4.1.1",
-    "pump": "^1.0.2",
-    "rimraf": "^2.6.1",
-    "stylelint": "^7.10.1",
-    "stylelint-config-standard": "^16.0.0",
-    "stylelint-order": "^0.4.4",
-    "vinyl-buffer": "^1.0.0",
-    "vinyl-source-stream": "^1.1.0"
+    "@babel/core": "7.8.4",
+    "@babel/preset-env": "7.8.4",
+    "babel-eslint": "10.0.3",
+    "babelify": "10.0.0",
+    "browser-sync": "2.26.7",
+    "browserify": "16.5.0",
+    "eslint": "6.8.0",
+    "eslint-config-airbnb-base": "14.0.0",
+    "eslint-plugin-import": "2.20.1",
+    "gulp": "4.0.2",
+    "gulp-autoprefixer": "7.0.1",
+    "gulp-babel": "8.0.0",
+    "gulp-clean-css": "4.2.0",
+    "gulp-eslint": "6.0.0",
+    "gulp-if": "3.0.0",
+    "gulp-imagemin": "7.1.0",
+    "gulp-load-plugins": "2.0.2",
+    "gulp-rename": "2.0.0",
+    "gulp-sass": "4.0.2",
+    "gulp-sourcemaps": "2.6.5",
+    "gulp-stylelint": "13.0.0",
+    "gulp-uglify": "3.0.2",
+    "gulp-util": "3.0.8",
+    "node-sass": "4.13.1",
+    "npm-run-all": "4.1.5",
+    "pump": "3.0.0",
+    "rimraf": "3.0.1",
+    "stylelint": "13.0.0",
+    "stylelint-config-standard": "19.0.0",
+    "stylelint-order": "4.0.0",
+    "vinyl-buffer": "1.0.1",
+    "vinyl-source-stream": "2.0.0"
   },
   "engine": {
     "node": "^12.14.0"
