--- a/package.json
+++ b/package.json
@@ -1,7 +1,13 @@
 {
   "name": "tohjustin.github.io",
-  "version": "2.0.0",
   "description": "portfolio website",
+  "license": "UNLICENSED",
+  "version": "2.0.0",
+  "homepage": "https://tohjustin.github.io/",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/tohjustin/tohjustin.github.io.git"
+  },
   "scripts": {
     "build": "npm-run-all -p clean export && gulp build --production",
     "clean": "rimraf dist && rimraf index.html",
@@ -47,7 +53,7 @@
     "vinyl-buffer": "^1.0.0",
     "vinyl-source-stream": "^1.1.0"
   },
-  "engine": "node >= 6.11.2",
-  "author": "Justin Toh",
-  "license": "MIT"
+  "engine": {
+    "node": "^12.14.0"
+  }
 }
