chore: Add .hugo_build.lock to .gitignore files
Refs: https://gohugo.io/news/0.89.0-relnotes/#notes
Signed-off-by: Justin Toh <tohjustin@hotmail.com>

--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,9 @@
 # Edit at https://www.gitignore.io/?templates=hugo,linux,macos
 
 ### Hugo ###
+# Build lock file
+.hugo_build.lock
+
 # Generated files by hugo
 /public/
 /resources/_gen/
